[project]
name = "crispybassoon"
version = "0.1.0"
description = ""
authors = [
    {name = "Jovanni Hernandez",email = "jovanni.m.hernandez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.28.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
